--- a/car_price.ipynb
+++ b/car_price.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 1,
    "id": "54bbe77d",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 2,
    "id": "547e613d",
    "metadata": {},
    "outputs": [],
@@ -25,7 +25,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 5,
+   "id": "44840517",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['Age', 'Annual Salary', 'Credit Card Debt', 'Net Worth',\n",
+       "       'Car Purchase Amount'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.columns[4:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "03537e1f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "id": "76833bcc",
    "metadata": {},
    "outputs": [
@@ -242,7 +273,7 @@
        "[500 rows x 9 columns]"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1868,9 +1899,7 @@
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "regressor.predict(new_data)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
