--- a/car_price.ipynb
+++ b/car_price.ipynb
@@ -1968,11 +1968,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "3c9f3b80",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "plt.rcParams['font.family'] = 'NanumGothic'"
+   ]
   },
   {
    "cell_type": "code",
@@ -1980,7 +1983,10 @@
    "id": "0b9cfb05",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import matplotlib\n",
+    "print(matplotlib.get)"
+   ]
   },
   {
    "cell_type": "code",
